# revisia

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json
app/: __init__.py  db.py  extensions.py  extract.py  llm.py  models.py
app/routes/: auth.py  documents.py  events.py  groups.py  quizzes.py  results.py  subjects.py  ui.py
app/static/js/: main.js
app/templates/: base.html  documents.html  home.html  login.html  quiz.html  quiz_play.html  register.html  results.html  upload.html
app/templates/errors/: 404.html  429.html  500.html
app/templates/events/: create.html  detail.html  list.html  play.html  result.html
app/templates/groups/: detail.html  index.html  subject_documents.html
app/templates/student/: event_detail.html  event_play.html  event_result.html  events.html
app/templates/teacher/: event_create.html  event_detail.html  events.html  group_detail.html  groups.html
tests/: conftest.py  test_documents_route.py  test_extract_module.py  test_full_flow.py  test_llm.py  test_llm_fallback.py  test_quizzes_route.py
